testdata/baselines/reference/submodule/compiler/inheritanceStaticFuncOverridingProperty.errors.txt
inheritanceStaticFuncOverridingProperty.ts(5,7): error TS2417: Class static side '{ new (): b; x: () => string; prototype: b; }' incorrectly extends base class static side '{ x: string; prototype: a; }'.
  Types of property 'x' are incompatible.
    Type '() => string' is not assignable to type 'string'.


==== inheritanceStaticFuncOverridingProperty.ts (1 errors) ====
    class a {
        static x: string;
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side '{ new (): b; x: () => string; prototype: b; }' incorrectly extends base class static side '{ x: string; prototype: a; }'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type '() => string' is not assignable to type 'string'.
        static x() {
            return "20";
        }
    }